# OpenCompany

./: .env  .env.dev  .env.template  .gitattributes  .gitignore  .npmignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RFC-0001-UASTL-Universal-API-Schema-Translation-Layer.md  docker-compose.prod.yml  install.ps1  install.sh  package.json  pnpm-lock.yaml  pyproject.toml  uninstall.sh
cli/: README.md  __init__.py  __main__.py  _common.py  buildenv.py  cli.py  colors.py  config.py  platform_.py  ports.py  pyproject.toml  run.py  supervisor.py  tcp.py  tree.py
cli/commands/: __init__.py  _supervised_runtime.py  _temporal_specs.py  build.py  clean.py  daemon.py  dev.py  docs.py  serve.py  start.py  stop.py  version.py
cli/commands/daemon/: __init__.py  _state.py  restart.py  start.py  status.py  stop.py
cli/commands/deploy/: __init__.py  _secrets.py  _state.py  _terraform.py  destroy.py  status.py  up.py
cli/terraform/gcp/: main.tf  outputs.tf  startup.sh.tftpl  variables.tf
cli/tests/: conftest.py  test_build.py  test_build_compile_pipeline.py  test_clean.py  test_cli.py  test_cli_branding.py  test_daemon.py  test_deploy_state.py  test_dev.py  test_docs.py  test_platform_paths.py  test_ports.py  test_release_pipeline_config.py  test_start.py  test_supervisor.py  test_version.py
server/: constants.py  gunicorn.conf.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
server/config/: ai_cli_providers.json  credential_providers.json  llm_defaults.json  model_registry.json  node_allowlist.json  pricing.json
server/core/: __init__.py  ansi.py  auth_cookies.py  cache.py  cleanup.py  config.py  container.py  credential_backends.py  credentials_database.py  database.py  health.py  logging.py  paths.py  tracing.py
server/middleware/: auth.py
server/models/: auth.py  database.py  node_metadata.py
server/nodejs/: package.json
server/nodes/: README.md  __init__.py  _visuals.py  groups.py  visuals.json
server/nodes/agent/: _events.py  _handles.py  _inline.py  _specialized.py  _vertex.py  ai_agent.py  chat_agent.py  claude_code_agent.py  codex_agent.py  deep_agent.py  rlm_agent.py
server/nodes/android/: __init__.py  _base.py  _dispatcher.py  _events.py  _handlers.py  _option_loaders.py  _refresh.py  _router.py
server/nodes/browser/: __init__.py  _install.py  _service.py
server/nodes/cloudflare/: __init__.py  _credentials.py  _handlers.py  _install.py  _service.py  cloudflare_action.py  meta.json
server/nodes/code/: _base.py
server/nodes/document/: embedding_generator.py  http_scraper.py  vector_store.py
server/nodes/email/: __init__.py  _events.py  _filters.py  _himalaya.py  _service.py  email_receive.py
server/nodes/filesystem/: _backend.py
server/nodes/github/: __init__.py  _credentials.py  _handlers.py  _install.py  _service.py  github_action.py  meta.json
server/nodes/google/: __init__.py  _auth_helper.py  _base.py  _credentials.py  _events.py  _filters.py  _gmail.py  _handlers.py  _oauth.py  _option_loaders.py  _refresh.py  _router.py  gmail_receive.py
server/nodes/location/: __init__.py  _credentials.py  _service.py  gmaps_create.py  gmaps_locations.py  gmaps_nearby_places.py
server/nodes/model/: _base.py  _credentials.py  _local_validator.py
server/nodes/proxy/: _usage.py  proxy_config.py  proxy_request.py
server/nodes/scraper/: apify_actor.py
server/nodes/search/: brave_search.py
server/nodes/skill/: __init__.py  _expander.py
server/nodes/social/: _base.py
server/nodes/stripe/: __init__.py  _credentials.py  _handlers.py  _install.py  _source.py  meta.json  stripe_action.py  stripe_receive.py
server/nodes/telegram/: __init__.py  _credentials.py  _events.py  _filters.py  _handlers.py  _refresh.py  _service.py  meta.json  telegram_receive.py  telegram_send.py
server/nodes/text/: text_generator.py
server/nodes/tool/: agent_builder.py
server/nodes/twitter/: __init__.py  _base.py  _credentials.py  _events.py  _filters.py  _handlers.py  _oauth.py  _refresh.py  _router.py  twitter_receive.py
server/nodes/vercel/: __init__.py  (+6 more)
server/routers/: __init__.py  auth.py  database.py  nodejs_compat.py  schemas.py  webhook.py  websocket.py  workflow.py
server/scripts/: smoke_test_skills.py
server/services/: agent_runtime.py  agent_team.py  ai.py  auth.py  chat_client.py  circuit_breaker.py  compaction.py  credential_registry.py  event_waiter.py  example_loader.py  markdown_formatter.py  memory_store.py  model_registry.py  node_allowlist.py  node_executor.py  node_output_schemas.py  node_registry.py  node_spec.py  nodejs_client.py  oauth_utils.py  parameter_resolver.py  pricing.py  pricing_handlers.py  process_service.py  scheduler.py  skill_loader.py  skill_prompt.py  skill_runtime.py  status_broadcaster.py  team_task_trace.py  text.py  todo_service.py  tool_identity.py  tracked_http.py  user_auth.py  workflow.py  workflow_import.py  workflow_migrations.py  workflow_naming.py  workflow_ops.py  (+2 more)
server/skills/: GUIDE.md
server/tests/: conftest.py  test_admin_handlers.py  test_android_toolkit_migration.py  test_ansi.py  test_auto_skill.py  test_canary_registry.py  test_chat_trigger_canary_producer.py  test_cloudevents_node_parameters.py  test_cloudflare_plugin.py  test_credential_icon.py  test_cron_canary.py  test_deployment_canary_listener.py  test_event_framework_phase_a.py  test_github_plugin.py  test_no_raw_prints.py  test_node_spec.py  test_parameter_resolver.py  test_plugin_contract.py  test_plugin_self_containment.py  test_polling_trigger_workflow.py  test_rebrand_compat.py  test_retry_policies.py  test_service_factories.py  test_shutdown_hooks.py  test_skill_icon_resolution.py  test_social_provider_registry.py  test_status_broadcasts.py  test_task_queue_coverage.py  test_task_trigger_canary_producer.py  test_team_topology.py  test_telegram_trigger_canary_producer.py  test_tool_registry.py  test_trigger_listener_workflow.py  test_user_settings_contract.py  test_vercel_plugin.py  test_whatsapp_trigger_canary_producer.py  test_workflow_ops.py  test_workflow_validator.py
(+1006 files in other folders)
