[project]
name = "machinaos-cli"
version = "0.1.0"
description = "MachinaOS project supervisor CLI (machina)."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "anyio>=4.0",
    "psutil>=6.0",
]

[project.scripts]
machina = "cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
