[project]
name = "machina"
version = "0.1.0"
description = "MachinaOS project supervisor CLI"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "psutil>=6",
  "anyio>=4",
  "python-dotenv>=1",
  # Required on Windows for the supervisor's Job Object (cli/tree.py).
  # Without it, child processes survive abnormal supervisor exit (SIGKILL,
  # BSOD, console close) and accumulate as orphans across dev restarts.
  # Floor 308 is the first release shipping prebuilt wheels for Python 3.13.
  "pywin32>=308; platform_system == 'Windows'",
]

[project.scripts]
machina = "cli.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
