[project]
name = "machinaos-server"
version = "0.1.0"
description = "MachinaOS workflow automation backend"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",  # Required by SQLAlchemy asyncio on macOS ARM64

    # HTTP/WebSocket
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "websockets>=14.0",

    # Google Maps
    "googlemaps>=4.10.0",

    # Logging & Serialization
    "structlog>=24.1.0",
    "orjson>=3.9.0",

    # Tracing / benchmarking (OpenTelemetry — industry standard)
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",

    # YAML parsing (for SKILL.md files + Temporal config rendering)
    "pyyaml>=6.0",

    # Temporal CLI installer (services/temporal/_install.py).
    # pooch: cross-platform binary download + cache (extracts the
    # ``temporal`` CLI from the official URL at
    # https://temporal.download/cli/archive/latest).
    "pooch>=1.8.2",

    # Auth
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",

    # Credential Encryption
    "cryptography>=44.0.0",

    # AI - All providers (directly imported in ai.py)
    # Originally pinned to lockstep with main to neutralise a tool_calls
    # empty-payload regression. Lifted to 1.3.x in response to security
    # advisories GHSA-jcc3-qxqm-r62h (unsafe deserialization in
    # langchain-core <=1.3.2), the langchain-openai DNS-rebinding SSRF
    # advisory (<1.1.14), and the langchain-text-splitters SSRF advisory
    # (<1.1.2). Full backend suite (1018/1018) re-validated after the bump.
    "langchain-core==1.3.3",
    "langchain-openai==1.1.14",
    "langchain-anthropic==1.4.0",
    "anthropic==0.94.0",
    "langchain-google-genai==4.2.1",
    "google-genai==1.72.0",
    "langchain-groq==1.1.2",
    "langchain-cerebras==0.8.2",
    # textChunker plugin (recursive / markdown / token strategies). Bumped
    # to 1.1.2+ alongside langchain-core 1.3.3 to clear the
    # HTMLHeaderTextSplitter SSRF advisory; the 1.1 line requires
    # langchain-core>=1.3, which we now satisfy.
    "langchain-text-splitters==1.1.2",
    "deepagents==0.5.2",

    # Pydantic 2.13 changed validator ordering; pin to main's 2.12 line
    # to keep AIMessage construction/tool-schema generation identical.
    "pydantic==2.12.5",

    # Dependency Injection
    "dependency-injector>=4.40.0",

    # Utils
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "qrcode[pil]>=8.0",
    "pytz>=2024.1",
    "psutil>=6.0.0",

    # Web Search
    "ddgs>=9.0.0",

    # Twitter/X API
    "xdk>=0.1.0",

    # Apify Web Scraping
    "apify-client>=1.8.0",

    # Crawlee Web Scraping
    "crawlee[beautifulsoup]>=1.4.0",
    "html2text>=2024.2.26",

    # Telegram Bot API
    "python-telegram-bot>=22.6",

    # Markdown formatting (GFM to platform-native)
    "markdown-it-py>=3.0.0",

    # Workflow naming — production-grade slugify with Unicode
    # transliteration (60M dl/mo, MIT). Used by
    # ``services.workflow_naming.slugify_name`` to derive
    # ``Workflow.slug`` from user display names. Brings ``text-unidecode``
    # as a transitive dep so "日本語" -> "Ri_Ben_Yu" instead of falling
    # back to "Workflow_N".
    "python-slugify>=8.0.0",

    # Local LLM SDKs — used by `nodes/model/_local_validator.py` to
    # introspect the user's actually-loaded models (context_length,
    # max_output_tokens). Replaces hand-rolled httpx probes against
    # /api/show and /api/v0/models so each SDK's own typed result
    # struct is the source of truth.
    "ollama>=0.6.0",
    "lmstudio>=1.5.0",

    # Gmail API
    "google-api-python-client>=2.100.0",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",

    # Temporal (durable workflow execution)
    "temporalio>=1.7.0",

    # RLM (Recursive Language Models) agent
    "rlms>=0.1.1",

    # MCP (Model Context Protocol) — host server for spawned CLI sessions
    # to discover and call MachinaOs tools (mcp__machina__*) the same way
    # VSCode's Claude Code extension does.
    "mcp>=1.0.0",

    # PTY transports — drive `claude` interactive TUI cross-platform.
    # POSIX uses ptyprocess (wraps forkpty) for `loop.add_reader`-friendly
    # async; Windows uses pywinpty v3.x which is Rust-backed via PyO3 +
    # winpty-rs + Maturin (used by Jupyter Lab terminals and Spyder's
    # IPython console). See docs-internal/claude_code_interactive_mode.md
    # for the topology rationale and the deferred upgrade path to an
    # out-of-process pty-host (VSCode's pattern).
    "ptyprocess>=0.7.0; sys_platform != 'win32'",
    "pywinpty>=3.0.3; sys_platform == 'win32'",
]

[project.optional-dependencies]
# PEP 621 extras — downstream consumers opt into these via
# ``pip install machinaos-server[<extra>]`` / ``uv pip install -e .[<extra>]``.
# Dev tooling lives in ``[dependency-groups]`` below (PEP 735) instead so
# ``uv sync`` keeps it installed by default in contributor checkouts.
docs = [
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.0.0",
    # `langchain-text-splitters` moved to top-level dependencies (above) —
    # the textChunker plugin is part of the runtime, not optional.
]
keyring = [
    "keyring>=25.0.0",  # OS-native credential storage (Windows/macOS/Linux)
]
aws = [
    "boto3>=1.34.0",  # AWS Secrets Manager
]

[dependency-groups]
# PEP 735 dependency groups — included by ``uv sync`` (and ``uv sync
# --group dev``) by default, but NOT shipped to PyPI consumers. Pre-fix
# the dev tools lived in ``[project.optional-dependencies].dev`` which
# meant every ``pnpm install`` (= ``uv sync`` without ``--extra dev``)
# uninstalled them — broke contributor test workflows on every install
# / dependency bump. Moving them here keeps ``pip install
# machinaos-server`` lean for end-users while making contributor
# checkouts test-ready straight out of ``pnpm install``.
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: fast unit tests with mocks (default)",
    "node_contract: contract tests that drive a handler through NodeExecutor",
    "slow: tests that take >1s",
    "credentials: tests for the credentials subsystem (encryption, auth_service, oauth)",
]

[tool.coverage.run]
source = ["services.handlers", "services.node_executor"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = [
    "E402",   # Module level import not at top (intentional lazy imports)
    "E701",   # Multiple statements on one line (compact dict patterns)
]

[tool.uv]
index-url = "https://pypi.org/simple"
